--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -15,3 +15,14 @@ a {
 * {
     box-sizing: border-box;
 }
+
+h1, h2, h3 {
+    font-family: Bosch, sans-serif;
+    font-weight: 400;
+    font-size: 48px;
+    color: #FFCD1B;
+
+    @media only screen and (min-width: 992px) {
+        font-size: 96px;
+    }
+}
