--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,11 @@
+@font-face {
+    font-family: "Bosch";
+    src: url('/assets/fonts/bosch/Bosch.otf');
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+}
+
 html,
 body {
     /* display: flex; */
@@ -16,7 +24,9 @@ a {
     box-sizing: border-box;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
     font-family: Bosch, sans-serif;
     font-weight: 400;
     font-size: 48px;
