Change header font

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,6 +1,6 @@
 @font-face {
-    font-family: "Bosch";
-    src: url('/assets/fonts/bosch/Bosch.otf');
+    font-family: "Mak";
+    src: url('/assets/fonts/mak/mak.woff');
     font-style: normal;
     font-weight: 400;
     font-display: swap;
@@ -27,7 +27,7 @@ a {
 h1,
 h2,
 h3 {
-    font-family: Bosch, sans-serif;
+    font-family: Mak, sans-serif;
     font-weight: 400;
     font-size: 48px;
     color: #FFCD1B;
