Add mobile wave

--- a/styles/Participant.module.scss
+++ b/styles/Participant.module.scss
@@ -18,7 +18,7 @@
 .blue__wrapper {
     width: 100%;
     flex-grow: 1;
-    background-color: #00348F;
+    background-color: #002361;
     position: relative;
 
     @media only screen and (min-width: 992px) {
