--- a/styles/Wave.module.scss
+++ b/styles/Wave.module.scss
@@ -1,4 +1,19 @@
-.wave {
+.wave__mobile {
+    position: absolute;
+    bottom: -2px;
+    width: 100%;
+
+    path {
+        fill: #F4D566;
+    }
+
+    @media only screen and (min-width: 992px) {
+        display: none;
+    }
+}
+
+.wave__desktop {
+    display: none;
     position: absolute;
     top: 0;
     right: -10px;
@@ -6,5 +21,9 @@
 
     path {
         fill: #F4D566;
+    }
+
+    @media only screen and (min-width: 992px) {
+        display: block;
     }
 }
