--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -6,13 +6,23 @@
     font-display: swap;
 }
 
+/* exo-200 - latin */
+@font-face {
+    font-family: 'Exo';
+    font-style: normal;
+    font-weight: 200;
+    src: local(''),
+         url('/assets/fonts/exo-v18-latin/exo-v18-latin-200.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+         url('/assets/fonts/exo-v18-latin/exo-v18-latin-200.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  }
+
 html,
 body {
     /* display: flex; */
     padding: 0;
     margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
-        Helvetica Neue, sans-serif;
+    font-size: 16px;
+    font-family: Exo, sans-serif;
 }
 
 a {
@@ -29,10 +39,12 @@ h2,
 h3 {
     font-family: Mak, sans-serif;
     font-weight: 400;
-    font-size: 48px;
+    font-size: 36px;
     color: #FFCD1B;
+    text-align: center;
 
     @media only screen and (min-width: 992px) {
         font-size: 96px;
+        text-align: left;
     }
 }
