--- a/styles/Arrow.module.scss
+++ b/styles/Arrow.module.scss
@@ -22,3 +22,19 @@
         }
     }
 }
+
+.desktop__only {
+    display: none;
+
+    @media only screen and (min-width: 992px) {
+        display: block;
+    }
+}
+
+.mobile__only {
+    display: block;
+
+    @media only screen and (min-width: 992px) {
+        display: none;
+    }
+}
