--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,20 +1,59 @@
 @font-face {
     font-family: "Mak";
-    src: url('/assets/fonts/mak/mak.woff');
+    src: url("/assets/fonts/mak/mak.woff");
     font-style: normal;
     font-weight: 400;
     font-display: swap;
 }
 
-/* exo-200 - latin */
+/* nunito-200 - latin */
 @font-face {
-    font-family: 'Exo';
+    font-family: "Nunito";
     font-style: normal;
     font-weight: 200;
-    src: local(''),
-         url('/assets/fonts/exo-v18-latin/exo-v18-latin-200.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-         url('/assets/fonts/exo-v18-latin/exo-v18-latin-200.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-  }
+    src: url("/assets/fonts/nunito/nunito-v23-latin-200.eot"); /* IE9 Compat Modes */
+    src: local(""), url("/assets/fonts/nunito/nunito-v23-latin-200.eot?#iefix") format("embedded-opentype"),
+        /* IE6-IE8 */ url("/assets/fonts/nunito/nunito-v23-latin-200.woff2") format("woff2"),
+        /* Super Modern Browsers */ url("/assets/fonts/nunito/nunito-v23-latin-200.woff") format("woff"),
+        /* Modern Browsers */ url("/assets/fonts/nunito/nunito-v23-latin-200.ttf") format("truetype"),
+        /* Safari, Android, iOS */ url("/assets/fonts/nunito/nunito-v23-latin-200.svg#Nunito") format("svg"); /* Legacy iOS */
+}
+/* nunito-regular - latin */
+@font-face {
+    font-family: "Nunito";
+    font-style: normal;
+    font-weight: 400;
+    src: url("/assets/fonts/nunito/nunito-v23-latin-regular.eot"); /* IE9 Compat Modes */
+    src: local(""), url("/assets/fonts/nunito/nunito-v23-latin-regular.eot?#iefix") format("embedded-opentype"),
+        /* IE6-IE8 */ url("/assets/fonts/nunito/nunito-v23-latin-regular.woff2") format("woff2"),
+        /* Super Modern Browsers */ url("/assets/fonts/nunito/nunito-v23-latin-regular.woff") format("woff"),
+        /* Modern Browsers */ url("/assets/fonts/nunito/nunito-v23-latin-regular.ttf") format("truetype"),
+        /* Safari, Android, iOS */ url("/assets/fonts/nunito/nunito-v23-latin-regular.svg#Nunito") format("svg"); /* Legacy iOS */
+}
+/* nunito-300 - latin */
+@font-face {
+    font-family: "Nunito";
+    font-style: normal;
+    font-weight: 300;
+    src: url("/assets/fonts/nunito/nunito-v23-latin-300.eot"); /* IE9 Compat Modes */
+    src: local(""), url("/assets/fonts/nunito/nunito-v23-latin-300.eot?#iefix") format("embedded-opentype"),
+        /* IE6-IE8 */ url("/assets/fonts/nunito/nunito-v23-latin-300.woff2") format("woff2"),
+        /* Super Modern Browsers */ url("/assets/fonts/nunito/nunito-v23-latin-300.woff") format("woff"),
+        /* Modern Browsers */ url("/assets/fonts/nunito/nunito-v23-latin-300.ttf") format("truetype"),
+        /* Safari, Android, iOS */ url("/assets/fonts/nunito/nunito-v23-latin-300.svg#Nunito") format("svg"); /* Legacy iOS */
+}
+/* nunito-600 - latin */
+@font-face {
+    font-family: "Nunito";
+    font-style: normal;
+    font-weight: 600;
+    src: url("/assets/fonts/nunito/nunito-v23-latin-600.eot"); /* IE9 Compat Modes */
+    src: local(""), url("/assets/fonts/nunito/nunito-v23-latin-600.eot?#iefix") format("embedded-opentype"),
+        /* IE6-IE8 */ url("/assets/fonts/nunito/nunito-v23-latin-600.woff2") format("woff2"),
+        /* Super Modern Browsers */ url("/assets/fonts/nunito/nunito-v23-latin-600.woff") format("woff"),
+        /* Modern Browsers */ url("/assets/fonts/nunito/nunito-v23-latin-600.ttf") format("truetype"),
+        /* Safari, Android, iOS */ url("/assets/fonts/nunito/nunito-v23-latin-600.svg#Nunito") format("svg"); /* Legacy iOS */
+}
 
 html,
 body {
@@ -22,7 +61,8 @@ body {
     padding: 0;
     margin: 0;
     font-size: 16px;
-    font-family: Exo, sans-serif;
+    font-family: Nunito, sans-serif;
+    font-weight: 300;
 }
 
 a {
@@ -40,7 +80,7 @@ h3 {
     font-family: Mak, sans-serif;
     font-weight: 400;
     font-size: 36px;
-    color: #FFCD1B;
+    color: #ffcd1b;
     text-align: center;
 
     @media only screen and (min-width: 992px) {
