--- a/styles/Participant.module.scss
+++ b/styles/Participant.module.scss
@@ -5,29 +5,12 @@
     flex-wrap: wrap;
 }
 
-.text {
-    color: #FFEAA0;
-    text-align: center;
-    transition: color 300ms ease;
-    a {
-        font-weight: bold;
-        color: red;
-        transition: color 300ms ease;
-    }
-    a:hover {
-        color: blue;
-    }
-    @media only screen and (min-width: 992px) {
-        text-align: left;
-    }
-}
-
-
 .blue__wrapper {
     width: 100%;
     flex-grow: 1;
-    background-color: #002361;
+    background-color: #001945;
     position: relative;
+    height: 65vh;
 
     @media only screen and (min-width: 992px) {
         width: 60vw;
@@ -38,13 +21,14 @@
 }
 
 .blue__background {
-    mix-blend-mode: screen;
-    opacity: 20%;
+    // mix-blend-mode: screen;
+    opacity: 15%;
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
+    filter: grayscale(100%);
 }
 
 .blue__foreground {
@@ -56,16 +40,52 @@
     }
 }
 
+.home__link {
+    font-family: Nunito;
+    color: white;
+    font-size: 18px;
+    margin-bottom: 36px;
+    display: flex;
+    align-items: center;
+
+    // Emoji
+    span {
+        font-size: 36px;
+    }
+}
+
 .headline__wrapper {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-bottom: 36px;
+}
+
+.texts__wrapper {
+    height: 350px;
+    overflow-y: scroll;
+    // Place for scrollbar
+    margin-right: -20px;
+    padding-right: 20px;
+    // Place for wave
+    padding-bottom: 48px;
+
+    .text {
+        color: #ffeaa0;
+        line-height: 150%;
+        text-align: center;
+        transition: color 300ms ease;
+        margin-bottom: 16px;
+        @media only screen and (min-width: 992px) {
+            text-align: left;
+        }
+    }
 }
 
 .yellow__wrapper {
     width: 100%;
     height: 35vh;
-    background-color: #F4D566;
+    background-color: #f4d566;
 
     @media only screen and (min-width: 992px) {
         width: 40vw;
