--- a/styles/Participant.module.scss
+++ b/styles/Participant.module.scss
@@ -59,6 +59,12 @@
     align-items: center;
     justify-content: space-between;
     margin-bottom: 36px;
+    h1 {
+        padding: 0 20px;
+        @media only screen and (min-width: 992px) {
+            padding: 0;
+        }
+    }
 }
 
 .texts__wrapper {
