--- a/styles/Participant.module.scss
+++ b/styles/Participant.module.scss
@@ -21,7 +21,6 @@
 }
 
 .blue__background {
-    // mix-blend-mode: screen;
     opacity: 15%;
     position: absolute;
     top: 0;
@@ -29,6 +28,9 @@
     width: 100%;
     height: 100%;
     filter: grayscale(100%);
+    @media only screen and (min-width: 992px) {
+        padding: 0 48px;
+    }
 }
 
 .blue__foreground {
@@ -38,6 +40,8 @@
     @media only screen and (min-width: 992px) {
         display: flex;
         align-items: center;
+        justify-content: center;
+        padding: 64px 128px;
     }
 }
 
@@ -52,6 +56,10 @@
     // Emoji
     span {
         font-size: 36px;
+    }
+
+    @media only screen and (min-width: 992px) {
+        margin-bottom: 72px;
     }
 }
 
@@ -74,6 +82,9 @@
     height: 100%;
     & > :not(.texts__wrapper) {
         flex-shrink: 0;
+    }
+    @media only screen and (min-width: 992px) {
+        width: 75%;
     }
 }
 
@@ -108,6 +119,8 @@
         height: 100%;
         display: flex;
         align-items: center;
+        position: relative;
+        padding-right: 64px;
     }
 }
 
