--- a/styles/Participant.module.scss
+++ b/styles/Participant.module.scss
@@ -138,6 +138,7 @@
     justify-content: center;
     flex-grow: 1;
     height: 100%;
+    padding: 0 16px;
      @media only screen and (min-width: 1024px) {
         flex-direction: column;
     }
