--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -67,6 +67,10 @@
     }
 }
 
+.subtitle__wrapper {
+    margin-bottom: 48px;
+}
+
 .subtitle {
     font-family: Nunito;
     font-size: 24px;
@@ -93,7 +97,6 @@
     display: flex;
     align-items: center;
     font-size: 36px;
-    color: #ffcd1b;
     &:hover {
         color: #ffffff;
     }
@@ -108,14 +111,11 @@
 .link__arrow {
     // .arrow start
     height: 35px;
-    stroke: #ffffff;
+    stroke: #82a9dd;
     transition: stroke 300ms ease;
 
     @media only screen and (min-width: 1024px) {
         height: 96px;
-    }
-    @media only screen and (min-width: 1536px) {
-        height: 155px;
     }
     // .arrow end
 
@@ -138,6 +138,7 @@
 
     p {
         margin-bottom: 16px;
+        color: #001945;
         @media only screen and (min-width: 1024px) {
             margin-bottom: 24px;
             text-align: center;
