--- a/styles/Participant.module.scss
+++ b/styles/Participant.module.scss
@@ -2,7 +2,10 @@
     width: 100%;
     height: 100vh;
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
+    @media only screen and (min-width: 1024px) {
+        flex-direction: row;
+    }
 }
 
 .blue__wrapper {
@@ -117,7 +120,7 @@
 
 .yellow__wrapper {
     width: 100%;
-    height: 35vh;
+    height: calc(30vw + 24px + 48px);
     background-color: #f4d566;
 
      @media only screen and (min-width: 1024px) {
@@ -138,7 +141,8 @@
     justify-content: center;
     flex-grow: 1;
     height: 100%;
-    padding: 0 16px;
+    padding: 24px 16px;
+    padding-bottom: 48px;
      @media only screen and (min-width: 1024px) {
         flex-direction: column;
     }
