--- a/styles/ThreeIcon.module.scss
+++ b/styles/ThreeIcon.module.scss
@@ -1,19 +1,21 @@
 .canvas {
     max-width: 350px;
-    max-height: 50%;
+    // max-height: 50%;
      @media only screen and (min-width: 1024px) {
         max-height: 33%;
     }
 }
 
-.canvas__left {
-    place-self: start;
-}
+@media only screen and (min-width: 1024px) {
+    .canvas__left {
+        place-self: start;
+    }
 
-.canvas__center {
-    place-self: center;
-}
+    .canvas__center {
+        place-self: center;
+    }
 
-.canvas__right {
-    place-self: end;
+    .canvas__right {
+        place-self: end;
+    }
 }
