--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -71,9 +71,11 @@ a {
     text-decoration: none;
     font-family: Mak, sans-serif;
     letter-spacing: 1px;
-    &:hover {
+    -webkit-tap-highlight-color: transparent;
+    &:hover, &:focus, &:active {
+        text-decoration: none;
         color: #ffcd1b;
-    }
+   }
 }
 
 * {
