--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -58,6 +58,10 @@
 
 .title {
     font-size: 56px;
+    color: #82a9dd;
+    &:hover {
+        color: #f4d566;
+    }
 
     @media only screen and (min-width: 1024px) {
         font-size: 64px;
@@ -133,4 +137,10 @@
             color: #ffffff;
         }
     }
+}
+
+.headline__font {
+    font-family: Mak;
+    font-weight: 400;
+    font-size: 18px;
 }
