--- a/styles/Participant.module.scss
+++ b/styles/Participant.module.scss
@@ -79,6 +79,17 @@
 
 .headline__wrapper {
     display: flex;
+    flex-direction: column;
+    span {
+        font-family: Mak, sans-serif;
+        font-weight: 400;
+        font-size: 24px;
+        color: #ffcd1b;
+    }
+}
+
+.headline__name__nav {
+    display: flex;
     align-items: center;
     justify-content: space-between;
     margin-bottom: 36px;
@@ -86,6 +97,12 @@
         padding: 0 20px;
          @media only screen and (min-width: 1024px) {
             padding: 0;
+            font-size: 48px;
+        }
+        span {
+            @media only screen and (min-width: 1024px) {
+                font-size: 36px;
+            }
         }
     }
 }
