--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -10,7 +10,7 @@
     width: 100%;
     background-color: #001945;
     position: relative;
-    height: 50vh;
+    height: calc(100% - var(--yellow-height));
 
     @media only screen and (min-width: 1024px) {
         position: fixed;
@@ -143,4 +143,11 @@
     font-family: Mak;
     font-weight: 400;
     font-size: 18px;
+}
+
+// Emoji
+.subtitle__wrapper span {
+    font-size: 48px;
+    text-align: center;
+    display: block;
 }
