--- a/styles/Participant.module.scss
+++ b/styles/Participant.module.scss
@@ -142,7 +142,7 @@
 
 .yellow__wrapper {
     width: 100%;
-    height: calc(30vw + 24px + 48px);
+    height: var(--yellow-height);
     background-color: #f4d566;
 
      @media only screen and (min-width: 1024px) {
