--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,10 @@
+// Variables
+html {
+    --yellow-width: 40%;
+    --yellow-height: calc(30vw + 24px + 48px);
+    // --blue-width: red;
+}
+
 @font-face {
     font-family: "Mak";
     src: url("/assets/fonts/mak/mak.woff");
