--- a/styles/Participant.module.scss
+++ b/styles/Participant.module.scss
@@ -20,7 +20,7 @@
     position: relative;
     height: 65vh;
 
-     @media only screen and (min-width: 1024px) {
+    @media only screen and (min-width: 1024px) {
         width: 60vw;
         height: 100%;
         display: flex;
@@ -36,7 +36,7 @@
     width: 100%;
     height: 100%;
     filter: grayscale(100%);
-     @media only screen and (min-width: 1024px) {
+    @media only screen and (min-width: 1024px) {
         padding: 0 48px;
     }
 }
@@ -45,7 +45,7 @@
     position: relative;
     padding: 20px;
     height: 100%;
-     @media only screen and (min-width: 1024px) {
+    @media only screen and (min-width: 1024px) {
         display: flex;
         align-items: center;
         justify-content: center;
@@ -59,20 +59,23 @@
 .home__link {
     font-family: Nunito;
     color: white;
-    font-size: 18px;
-    margin-bottom: 36px;
+    font-size: 16px;
+    margin-bottom: 24px;
     display: flex;
     align-items: center;
 
     // Emoji
     span {
-        font-size: 36px;
+        font-size: 28px;
     }
 
-     @media only screen and (min-width: 1024px) {
+    @media only screen and (min-width: 1024px) {
+        span {
+            font-size: 36px;
+        }
         margin-bottom: 36px;
     }
-     @media only screen and (min-width: 1536px) {
+    @media only screen and (min-width: 1536px) {
         margin-bottom: 72px;
     }
 }
@@ -92,12 +95,14 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-bottom: 36px;
+    margin-bottom: 24px;
     h1 {
         padding: 0 20px;
-         @media only screen and (min-width: 1024px) {
+        font-size: 24px;
+        @media only screen and (min-width: 1024px) {
             padding: 0;
             font-size: 48px;
+            margin-bottom: 36px;
         }
         span {
             @media only screen and (min-width: 1024px) {
@@ -114,7 +119,7 @@
     & > :not(.texts__wrapper) {
         flex-shrink: 0;
     }
-     @media only screen and (min-width: 1536px) {
+    @media only screen and (min-width: 1536px) {
         width: 75%;
     }
 }
@@ -134,7 +139,7 @@
         text-align: center;
         transition: color 300ms ease;
         margin-bottom: 16px;
-         @media only screen and (min-width: 1024px) {
+        @media only screen and (min-width: 1024px) {
             text-align: left;
         }
     }
@@ -145,7 +150,7 @@
     height: var(--yellow-height);
     background-color: #f4d566;
 
-     @media only screen and (min-width: 1024px) {
+    @media only screen and (min-width: 1024px) {
         width: 35vw;
         height: 100%;
         display: flex;
@@ -174,7 +179,7 @@
     position: absolute;
     height: 100%;
     width: 100%;
-    background-color: #F4D566;
+    background-color: #f4d566;
     z-index: 10;
     opacity: 0.4;
     @media only screen and (min-width: 1024px) {
